updated navbar/index design

--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+* {
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
